# framework.multimedia.libmm-transcode

./: configure.ac  project.config
packaging/: libmm-transcode.spec
transcode/: Makefile.am  mm_transcode_pipeline.c  mm_transcode_seek.c
transcode/include/: mm_transcode_internal.h
transcode/test/: Makefile.am  mm_transcode_testsuite.c
